--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
 		</div>
 	</main>
 	<!-- build:js -->
-	<script src="js/jquery.js"></script>
-	<script src="js/materialize.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/materialize.min.js"></script>
 	<script src="js/script.js"></script>
 	<!-- endbuild -->
 </body>
